Contains styles for buttons below the search bar. Also sorted out the alignment issues with the logo and search bar. Used a div with width 100 and text-aligned center inside of that

--- a/css/styles.css
+++ b/css/styles.css
@@ -10,7 +10,8 @@ body {
 .logo {
     position: absolute; 
     top: 275px;; 
-    left: 41%;
+    width: 100%;
+    text-align: -webkit-center;
 }
 
 .nvbar-top {
@@ -105,7 +106,8 @@ body {
 .search {
     position: absolute; 
     top: 385px; 
-    left: 33%;
+    width: 100%; 
+    text-align: -webkit-center;
 } 
 
 #searchbar:hover {
@@ -113,51 +115,33 @@ body {
     -webkit-box-shadow: 0px 0px 5px 0px rgba(214, 214, 214, 0.9);
 }
 
-.center {
-    float: left; 
-    clear: none;
-}
-
-.GS {
-   width: 127.4px; 
-   height: 36px; 
-   padding-left: 4px; 
-   padding-right: 4px; 
-   background-color: #F2F2F2; 
-   margin: 0 4px;
-   border: none;
-   border-radius: 4px; 
-   text-align: center;
-   position: absolute; 
-   top: 458px;
-   right: 50%;
-}
-
-.GSbutton {
-    vertical-align: -8px;
-    text-decoration: none; 
-    color: #5F6368;
-    font-size: 14px;
-}
-
-.IFL {
-    width: 127.4px; 
-    height: 36px; 
-    padding-left: 4px; 
-    padding-right: 4px; 
-    margin: 0 4px;
-    background-color: #F2F2F2; 
-    border: none;
-    border-radius: 4px; 
-    text-align: center;
+.Sbuttons {
+    text-align: -webkit-center;
     position: absolute; 
-    top: 458px;  
-    left: 50%;
- }
- 
- .IFLbutton {
-     vertical-align: -8px;
-     text-decoration: none; 
-     color: #5F6368;
-     font-size: 14px;
- }
+    top: 460px; 
+    width: 100%;
+}
+
+.Sbuttons a {
+    margin: 11px 4px; 
+    background-color: #f4f4f4; 
+    border: none; 
+    border-radius: 4px; 
+    height: 36px;
+    padding: 0 16px;
+    text-align: center;
+    display: inline-block;
+    vertical-align: -5px;
+    line-height: 34px;
+    text-decoration: none; 
+    color: #5F6368; 
+    font-size: 13px;
+}
+
+.Sbuttons a:hover {
+    background: linear-gradient(top,#f8f8f8,#f1f1f1); 
+    border: 1px solid #c6c6c6;
+    box-shadow: 0 1px 1px rgba(0,0,0,0.1);
+    color: #222;
+}
+
